--- a/recipe_optimizer/templates/api/index.html
+++ b/recipe_optimizer/templates/api/index.html
@@ -6,6 +6,7 @@
     <title>Recipe Steps Saving</title>
     {% load static %}
     <link rel="stylesheet" href = "{% static 'css/styles.css' %}">
+    <link rel="icon" href="https://img.icons8.com/ios/452/chef.png" type="image/png">
 </head>
 <body>
     <div class="page-container">
@@ -37,7 +38,8 @@
             </div>
     
             <button onclick="addStep()">Add Step</button>
-            <button onclick="submitAndShowResult()">See the Result</button>
+            <button onclick="submitAndShowResult()">See the Result</button>      
+     
         </div>
     
         <div class="table-container">
@@ -49,13 +51,14 @@
                         <th>Duration (min)</th>
                         <th>Requires Chef</th>
                         <th>Prerequisites</th>
+                        <th>Action</th>
                     </tr>
                 </thead>
                 <tbody id="stepsBody"></tbody>
             </table>
         </div>
 
-        <div class="table-container" style="margin-top: 50px;">
+        <div class="table-container">
             <h2>Steps from API (Sorted)</h2>
             <table id="apiStepsTable">
                 <thead>
