--- a/recipe_optimizer/templates/api/index.html
+++ b/recipe_optimizer/templates/api/index.html
@@ -11,7 +11,7 @@
     <style>
     </style>
 </head>
-<body>
+<body background="">
     <div class="main-container">
         <!-- Form Section -->
         <div class="form-and-steps">
