update for frontend

--- a/recipe_optimizer/templates/api/index.html
+++ b/recipe_optimizer/templates/api/index.html
@@ -11,7 +11,7 @@
     <style>
     </style>
 </head>
-<body background="">
+<body background="https://images.unsplash.com/photo-1638009665711-dfacc28c88c2?q=80&w=2071&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
     <div class="main-container">
         <!-- Form Section -->
         <div class="form-and-steps">
