--- a/recipe_optimizer/static/css/styles.css
+++ b/recipe_optimizer/static/css/styles.css
@@ -15,6 +15,32 @@ body {
     padding: 20px;
     overflow-x: hidden; /* Prevent horizontal overflow */
 }
+.project-title {
+    font-size: 2.5rem;
+    color: #4caf50;
+    text-align: center;
+    margin: 20px 0;
+    padding: 10px;
+    border: 2px solid #4caf50;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.8);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); 
+}
+
+#resultMessage {
+    font-size: clamp(1.2rem, 2vw, 1.5rem); /* Responsive font size */
+    color: #4caf50; /* Mesaj rengini yeşil yap */
+    font-weight: bold; /* Kalın yazı */
+    text-align: center; /* Ortala */
+    margin: 10px 0px 0px 0px; /* Üst ve alt boşluk */
+    padding: 15px; /* İç boşluk */
+    background-color: #e8f5e9; /* Açık yeşil arka plan */
+    border: 1px solid #4caf50; /* Yeşil çerçeve */
+    border-radius: 10px; /* Yuvarlatılmış köşeler */
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); /* Hafif gölge */
+}
+
+
 
 .main-container {
     width: 100%;
