--- a/recipe_optimizer/static/css/styles.css
+++ b/recipe_optimizer/static/css/styles.css
@@ -1,4 +1,9 @@
-/* Global Settings */
+/* Dynamic font size */
+:root {
+    --font-base: clamp(1rem, 1vw + 0.5rem, 1.2rem);
+}
+
+/* Global section */
 * {
     box-sizing: border-box;
     margin: 0;
@@ -6,14 +11,15 @@
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    background: url("https://images.unsplash.com/photo-1638009665711-dfacc28c88c2?q=80&w=2071&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+    font-family: "Roboto", sans-serif;
     background-color: #f4f7fc;
     display: flex;
     justify-content: center;
     align-items: flex-start;
     height: 100vh;
     padding: 20px;
-    overflow-x: hidden; /* Prevent horizontal overflow */
+    overflow-x: hidden;
 }
 
 .project-title {
@@ -29,6 +35,7 @@ body {
 }
 
 #resultMessage {
+    display: none;
     font-size: clamp(1.2rem, 2vw, 1.5rem);
     color: #ec5353;
     font-weight: bold;
@@ -50,36 +57,29 @@ body {
     gap: 40px;
 }
 
-/* Fluid and Responsive Font Sizes */
-:root {
-    --font-base: clamp(1rem, 1vw + 0.5rem, 1.2rem); /* Dynamic font size */
-}
-
 .section-title {
     font-size: clamp(1.5rem, 2vw, 2rem);
     color: #333;
-    border-bottom: 2px solid #ddd;
+    margin-bottom: 10px;
     padding-bottom: 10px;
     font-weight: bold;
 }
-
-
 
 /* Form and Steps - Flex Layout */
 .form-and-steps {
     display: flex;
     flex-direction: row;
     gap: 20px;
-    flex-wrap: wrap; /* Stack form and table when the screen narrows */
+    flex-wrap: wrap;
 }
 
-/* Form Container */
 .form-container {
     background-color: #ffffff;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
-    flex-basis: 40%; /* Adjusted width for better layout */
+    flex-basis: 40%;
+    /* Adjusted width for better layout */
 }
 
 .modern-form {
@@ -94,7 +94,8 @@ body {
     gap: 5px;
 }
 
-input, select {
+input,
+select {
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -102,22 +103,21 @@ input, select {
     width: 100%;
 }
 
-/* Butonlar için arka planı kaldır */
 button {
     padding: 12px 0;
     border-radius: 8px;
     font-size: var(--font-base);
     cursor: pointer;
-    width: 100%; /* Buton genişliği */
-    background: none; /* Arka planı kaldır */
-    border: none; /* Kenarlıkları kaldır */
-    transition: background-color 0.3s; /* Hover efekti */
+    width: 100%;
+    background: none;
+    border: none;
+    transition: background-color 0.3s;
 }
 
 .button-group {
     display: flex;
-    justify-content: space-between; /* Boşluk bırak */
-    gap: 10px; /* Butonlar arasında boşluk */
+    justify-content: space-between;
+    gap: 10px;
 }
 
 .btn-primary {
@@ -140,7 +140,12 @@ button:hover {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
-    flex-basis: 55%; /* Adjusted width for better layout */
+    flex-basis: 55%;
+}
+
+thead {
+    width: auto;
+    min-width: 100%;
 }
 
 table {
@@ -151,7 +156,8 @@ table {
     overflow-wrap: anywhere;
 }
 
-th, td {
+th,
+td {
     padding: 10px;
     border-bottom: 1px solid #ddd;
     text-align: left;
@@ -168,17 +174,36 @@ td {
     text-overflow: ellipsis;
 }
 
-thead {
-    background-color: #4caf50;
-    color: white;
-}
-
-/* API Table Under Both */
 .api-steps-table {
     margin-top: 40px;
+    width: 100%;
 }
 
-/* Responsive and Fluid Design */
+.prereq-divs {
+    display: flex;
+    align-items: center;
+}
+
+#prereq-test {
+    order: 1;
+}
+
+input[type="checkbox"] {
+    order: 2;
+}
+
+#prerequisiteTable tr,
+td {
+    border-bottom: none;
+    vertical-align: middle;
+}
+
+#prerequisiteTable td {
+    margin: 0 !important;
+    padding: 0 !important;
+}
+
+/* Responsive Design */
 @media (max-width: 768px) {
     .form-and-steps {
         flex-direction: column;
@@ -188,11 +213,14 @@ thead {
         font-size: clamp(1.2rem, 1.5vw, 1.6rem);
     }
 
-    th, td {
+    th,
+    td {
         font-size: 0.9rem;
     }
 
-    input, select, button {
+    input,
+    select,
+    button {
         font-size: 0.9rem;
     }
 }
@@ -202,16 +230,18 @@ thead {
         font-size: clamp(1rem, 1.2vw, 1.4rem);
     }
 
-    th, td {
+    th,
+    td {
         font-size: 0.8rem;
     }
 
-    input, select, button {
+    input,
+    select,
+    button {
         font-size: 0.8rem;
     }
 }
 
-/* Status Icons */
 .status-true {
     color: green;
 }
